fix: fix scrollbars in chromium

--- a/src/styles/display.scss
+++ b/src/styles/display.scss
@@ -1,5 +1,5 @@
 .Display {
-  overflow: scroll;
+  overflow-y: scroll;
   height: auto;
   max-height: 100%;
 
