--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,5 +1,7 @@
 .Navigation {
-  overflow-y: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
+
   scrollbar-width: thin;
   scrollbar-color: var(--color-border) transparent;
 
@@ -24,4 +26,15 @@
 
 .Link--active {
   border-bottom: 1px solid var(--text-selected);
+}
+
+/* Scrollbars in Chromium */
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--color-border);
+  border-radius: 20px;
 }
